Bug 327532: Content inserted before an element with a long (multi-line) ":before" text is inserted in the wrong place. r+sr=roc